# ChatCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WIKI.MD
.github/workflows/: ci-cd.yml
config/: jira-xray-config.json
project-management/epics/: core_messaging_epic.json
project-management/stories/: message_creation_story.json
scripts/: generate_xray_report.py  run_tests_xray.py
src/client/: main.cpp  websocket_client.cpp  websocket_client.hpp
src/common/: logger.cpp  logger.hpp  message.cpp  message.hpp
src/server/: main.cpp  websocket_server.cpp  websocket_server.hpp
test-management/test-cases/: message_tests.json
test-management/test-executions/: execution_template.json
test-management/test-plans/: sprint_1_test_plan.json
tests/: history_test.cpp  logger_test.cpp  message_test.cpp  websocket_client_test.cpp  websocket_server_test.cpp
